--- a/gioithieu.html
+++ b/gioithieu.html
@@ -32,10 +32,11 @@
     <table>
       <tr><th>Họ tên</th><th>Học vấn</th></tr>
       <tr><td>Trần Đăng Công</td><td>Tiến sĩ</td></tr>
+      <img src="img (2)_1.jpg" alt="Trần Đăng Công">
       <tr><td>Lê Văn Hiếu</td><td>Thạc sĩ</td></tr>
+      <img src="" alt="">
     </table>
   </main>
-
   <footer>
     <p>© 2025 Khoa CNTT - Đại học Đại Nam</p>
   </footer>
