--- a/tintuc.html
+++ b/tintuc.html
@@ -10,7 +10,7 @@
     <h1>Tin tức Khoa CNTT</h1>
     <nav>
       <ul>
-        <li><a href="index.html">Trang chủ</a></li>
+        <li><a href="trangchu.html">Trang chủ</a></li>
         <li><a href="gioi-thieu.html">Giới thiệu</a></li>
         <li><a href="tin-tuc.html">Tin tức</a></li>
         <li><a href="lien-he.html">Liên hệ</a></li>
