--- a/trangchu.html
+++ b/trangchu.html
@@ -10,8 +10,8 @@
     <h1>Khoa CNTT - Đại học Đại Nam</h1>
     <nav>
       <ul>
-        <li><a href="index.html">Trang chủ</a></li>
-        <li><a href="gioi-thieu.html">Giới thiệu</a></li>
+        <li><a href="trangchu.html">Trang chủ</a></li>
+        <li><a href="gioithieu.html">Giới thiệu</a></li>
         <li class="menu-cha">
           <a href="#">Đào tạo</a>
           <ul class="menu-con">
@@ -20,8 +20,8 @@
             <li><a href="#">Ngắn hạn</a></li>
           </ul>
         </li>
-        <li><a href="tin-tuc.html">Tin tức</a></li>
-        <li><a href="lien-he.html">Liên hệ</a></li>
+        <li><a href="tintuc.html">Tin tức</a></li>
+        <li><a href="lienhe.html">Liên hệ</a></li>
       </ul>
     </nav>
   </header>
