--- a/gioithieu.html
+++ b/gioithieu.html
@@ -34,7 +34,7 @@
       <tr><td>Trần Đăng Công</td><td>Tiến sĩ</td></tr>
       <img src="img (2)_1.jpg" alt="Trần Đăng Công">
       <tr><td>Lê Văn Hiếu</td><td>Thạc sĩ</td></tr>
-      <img src="" alt="">
+      <img src="lehieu.jpg" alt="Lê Văn Hiếu">
     </table>
   </main>
   <footer>
